# runtime

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yaml
client/: CMakeLists.txt
client/beast/: CMakeLists.txt
client/beast/include/: beastclient.h
client/beast/src/: beastclient.cpp
client/curlpp/: CMakeLists.txt
client/curlpp/include/: curlppclient.h
client/curlpp/src/: curlppclient.cpp
examples/: CMakeLists.txt
examples/cpp-openapi/: CMakeLists.txt  main.cpp
examples/cpp-openapi/client/: CMakeLists.txt
examples/cpp-openapi/client/include/: add_one.h  add_one_params.h  add_one_response.h  destroy_one.h  destroy_one_params.h  destroy_one_response.h  find_todo.h  find_todo_params.h  find_todo_response.h  todo_common.h  todo_params_common.h  todo_response_common.h  todo_stream.h  todoclient.h  typefactory.h
examples/cpp-openapi/client/src/: add_one.cpp  add_one_params.cpp  add_one_response.cpp  destroy_one.cpp  destroy_one_params.cpp  destroy_one_response.cpp  find_todo.cpp  find_todo_params.cpp  find_todo_respose.cpp  todoclient.cpp  typefactory.cpp
examples/cpp-openapi/common/: CMakeLists.txt
examples/cpp-openapi/common/include/: settings.h
examples/cpp-openapi/include/: typefactory.h
examples/cpp-openapi/model/: CMakeLists.txt
examples/cpp-openapi/model/include/: error.h  item.h
examples/cpp-openapi/model/src/: error.cpp  item.cpp
examples/cpp-openapi/src/: typefactory.cpp
include/: model.h
json/: CMakeLists.txt
json/include/: jsonopenapi.h  jsonopenapi2.h  openapi_json_macro.h
json/include/openapi/json/: macro.h
json/providers/: CMakeLists.txt
json/providers/nlohmann-json/: CMakeLists.txt
json/providers/nlohmann-json/include/: openapi_nlohmann_json.h  openapi_nlohmann_json2.h
json/providers/nlohmann-json/include/openapi/json/: nlohmann.h
json/providers/nlohmann-json/src/: openapi_nlohmann_json.cpp  openapi_nlohmann_json2.cpp
json/providers/nlohmann-json/test/: CMakeLists.txt  nlohmannjson_test.cpp
json/providers/rapidjson/: CMakeLists.txt
json/providers/rapidjson/include/: openapi_rapidjson.h  openapi_rapidjson2.h
json/providers/rapidjson/include/openapi/json/: rapid.h
json/providers/rapidjson/src/: openapi_rapidjson.cpp  openapi_rapidjson2.cpp
json/test/: CMakeLists.txt  json2_test.cpp  json_test.cpp
runtime/: CMakeLists.txt
runtime/include/: auth.h  client.h  executor.h  request.h  response.h  runtime_types.h  strconv.h
runtime/include/openapi/runtime/: auth.h  client.h  request.h  response.h  runtime_types.h  strconv.h  string.h  type_mangle.h
runtime/middleware/: CMakeLists.txt
runtime/middleware/include/openapi/runtime/: handler.h  router.h
runtime/middleware/src/: router.cpp
runtime/middleware/test/: CMakeLists.txt  router_test.cpp
runtime/src/: auth.cpp  client.cpp  executor.cpp  request.cpp  response.cpp  strconv.cpp  string.cpp
runtime/test/: CMakeLists.txt  executor_test.cpp  request_response_test.cpp  strconv_test.cpp
src/: model.cpp  todoclient.cpp
testutil/: CMakeLists.txt
testutil/include/openapi/testutil/: string.h
testutil/src/: string.cpp
